style.css
/*
Theme Name: Portefolio
Theme URI: http://eliepse.fr
Author: Eliepse
Author URI: http://eliepse.fr
Description: Thème de mon Portefolio
Version: 1.0
Tags: portefolio
*/

html, body {
	
	width: 100%;
	padding: 0;
	margin: 0;
	
	font-family: Aller, Arial, sans-serif;
	
	background-image: url('img/fond.jpg');
	
}

body.home {
	
	height: 100%;
	
}


.content {
	
	width: 100%;
	overflow: hidden;
	
	text-align: center;
	
}

.home .content {
	
	position: fixed;
	top: 0; left: 0;
	height: 100%;
	
}

nav {
	
	position: fixed;
	top: 50px; left: 40px; bottom: 50px;
	z-index: 10;
	
	font-size: 14px;
	color: #b0b0b0;
	
}

	nav a {
		
		color: inherit;
		text-decoration: inherit;
		
	}
	
	nav a:hover {
		
		color: inherit;
		text-decoration: inherit;
		
	}
	
	h1 {
		
		position: relative;
		margin: 0;
		padding: 0;
		padding-bottom: 12px;
		border-bottom: 5px solid #96928e;
		z-index: 20;
		
		font-size: 52px;
		font-weight: normal;
		color: #96928e;
		
	}
	
	.nav-list {
		
		position: relative;
		padding: 0;
		margin: 0;
		margin-top: 20px;
		z-index: 20;
		
		font-weight: 100;
		line-height: 20px;
		
		list-style-type: none;
		
	}
	
	.nav-list li { cursor: pointer; }
	
	.nav-list .hover, .nav-list li:hover { color: #75716d; }
	
	.nav-h3 {
		
		margin: 0;
		font-size: inherit;
		font-weight: bold;
		
	}
	
	.nav-head { font-weight: bold; }
	/*.nav-projects { display: inline-block; }*/
	.nav-list-space { margin-bottom: 20px; }
	



.post {
	
	width: 100%;
	max-width: 700px;
	/*min-height: 400px;*/
	margin: 150px auto 150px auto;
	padding: 35px 0;
	background-color: #fff;
	
	text-align: left;
	color: #75716d;
	
}
	
	.post-title {
		
		margin: 0 45px 30px 45px;
		
		font-size: 24px;
		font-weight: bold;
		
	}
	
	.post-content {
		
		font-size: 14px;
		font-weight: 100;
		line-height: 20px;
		margin-bottom: 30px;
		
	}

	.post-content p {
		
		margin: 0 45px;
		margin-bottom: 15px;
		
	}
	
	.post img {
		
		width: 100%;
		height: auto;
		margin-bottom: 5px;
		
	}
	
	.post a {
		position: relative;
		z-index: 30;
		
		color: #adaba5;
		text-decoration: none;
	}
	.post a:hover { color: inherit;	}







.toCenterY {
	
	display: inline-block;
	vertical-align: middle;
	
}

.toCenterY.ghost {
	
	width: 0;
	height: 100%;
	
}


.mosaic {
	
	position: relative;
	width: 450px;
	height: 450px;
	
}

	.backimg {
		
		display: none;
		position: absolute;
		top: 0; left: 0;
		width: 450px;
		height: 450px;
		z-index: 2;
		
		background-size: cover;
		
		opacity: 0.8;
		
	}

.square {
	
	position: absolute;
	
	cursor: pointer;
	z-index: 3;
	
}
	.square div {
		
		position: absolute;
		top: 2px;
		left: 2px;
		right: 2px;
		bottom: 2px;
		
	}
	
	.square div {
		
		transition: all .1s;
		
	}
	
	.square.orange div {
		
		background: rgb(235, 122, 94);
		border: 5px solid rgb(235, 122, 94);
		
	}
	
	.square.blue div {
		
		background: rgb(72, 167, 189);
		border: 5px solid rgb(72, 167, 189);
		
	}
	
	.square.hover div {
		
		background: none;
		
	}
	
.copyright {
	
	position: fixed;
	bottom: 20px;
	right: 20px;
	
	font-size: 12px;
	font-weight: 100;
	text-align: right;
	color: #b0b0b0;
	
}

h6 {
	
	margin: 0;
	padding: 0;
	
	font-weight: inherit;
	font-size: inherit;
	color: inherit;
	
}

